@@ -5,6 +5,8 @@ CHANGES
 3.9.1 (unreleased)
 ------------------
 
+Removed use of 'zope.testing.doctestunit' in favor of stdlib's 'doctest.
+
 
 3.9.0 (2009-12-29)
 ------------------
